<resources>

    <string name="back_pressed_in_cool_time">뒤로가기 버튼을 한번 더 누르면 종료됩니다.</string>

    <!-- 홈화면 -->
    <string name="saving_items_empty_title">아직 절약할 항목이 없어요</string>
    <string name="saving_items_empty_title2">절약한 항목이 없어요</string>
    <string name="saving_items_empty_description">소소한 지출도 모이면 꽤나 큰 금액이니까.\n평소에 술술 나가는 지출을 잡아보세요! </string>
    <string name="saving_items_add">절약 리스트 추가</string>
    <string name="saving_items_price_sum_default">절약과 좀 더 친해지는 오늘!</string>
    <string name="saving_items_price_sum_format">총 %s 원을 아꼈어요!</string>
    <string name="saving_items_name">절약명</string>
    <string name="saving_items_price">절약한 금액</string>

    <!-- 절약 추가 -->
    <string name="saving_item_activity_toolbar_title">절약 추가</string>
    <string name="saving_item_udpate_activity_toolbar_title">절약 수정</string>
    <string name="saving_items_content_title">절약하고 싶은 항목</string>
    <string name="saving_items_content_hint">예) 아메리카노, 하리보젤리, 담배</string>
    <string name="saving_items_price_title">회당 지출 금액</string>
    <string name="saving_items_price_hint">예) 4,500원</string>
    <string name="saving_items_target_period">절약 목표 기간</string>
    <string name="saving_items_period_set">기간 설정</string>
    <string name="saving_items_day_of_week">절약 요일</string>
    <string name="saving_items_tilde">~</string>
    <string name="saving_items_monday">월</string>
    <string name="saving_items_tuesday">화</string>
    <string name="saving_items_wednesday">수</string>
    <string name="saving_items_thursday">목</string>
    <string name="saving_items_friday">금</string>
    <string name="saving_items_saturday">토</string>
    <string name="saving_items_sunday">일</string>
    <string name="saving_items_impossible_day_of_week">절약할 수 없는 요일입니다</string>

    <!-- 절약 수정/삭제 팝업 -->
    <string name="saving_item_update_popup_title">정말 수정하시겠어요?</string>
    <string name="saving_item_update_popup_description">지금부터 수정한 내용이\n기록 화면에 적용되어 보일거예요.</string>
    <string name="saving_item_delete_popup_title">정말 삭제하시겠어요?</string>
    <string name="saving_item_cannot_delete_popup_title">삭제할 수 없어요.</string>
    <string name="saving_item_delete_popup_description">삭제하시면 되돌릴 수 없어요.\n신중하게 생각해보시고 삭제하세요!</string>
    <string name="saving_item_cannot_delete_popup_description">절약한 항목은 삭제할 수 없어요!\n삭제를 원하면 체크를 해제해주세요. </string>
    <string name="saving_items_saved">절약했어요</string>

</resources>
