<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_empty_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saving_items_empty_title"
                android:textAppearance="@style/Typography.Body1.Bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_empty_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@string/saving_items_empty_description"
                android:textColor="@color/gray3"
                android:textAppearance="@style/Typography.Body4.Regular"
                app:layout_constraintTop_toBottomOf="@id/tv_empty_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_saving_items_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rect_primary_r10"
                android:paddingVertical="8dp"
                android:paddingHorizontal="22dp"
                android:layout_marginTop="68dp"
                android:gravity="center"
                android:text="@string/saving_items_add"
                android:textColor="@color/white"
                android:textAppearance="@style/Typography.Button1.Medium"
                app:layout_constraintTop_toBottomOf="@id/tv_empty_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
