<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="product"
            type="com.yapp.android2.domain.entity.Product" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_rect_gray1_r10">

        <View
            android:id="@+id/checkbox_click_sections"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/price_click_sections"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/price_click_sections"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@id/checkbox_click_sections"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/selector_checkbox"
            android:button="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_saving_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:text="@string/saving_items_name"
            android:textAppearance="@style/Typography.Body5.Medium"
            android:textColor="@color/gray4"
            app:layout_constraintEnd_toEndOf="@+id/checkbox_click_sections"
            app:layout_constraintStart_toEndOf="@id/checkbox"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{product.name}"
            android:textAppearance="@style/Typography.Body2.Bold"
            app:layout_constraintEnd_toEndOf="@+id/checkbox_click_sections"
            app:layout_constraintStart_toStartOf="@+id/tv_saving_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_saving_name"
            tools:text="아메리카노" />

        <TextView
            android:id="@+id/tv_saving_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:text="@string/saving_items_price"
            android:textAppearance="@style/Typography.Body5.Medium"
            android:textColor="@color/gray4"
            app:layout_constraintBottom_toTopOf="@+id/tv_price"
            app:layout_constraintEnd_toEndOf="@+id/checkbox_click_sections"
            app:layout_constraintStart_toEndOf="@id/checkbox"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@style/Typography.Body2.Bold"
            android:textColor="@color/gray2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/checkbox_click_sections"
            app:layout_constraintStart_toStartOf="@+id/tv_saving_name"
            tools:text="4,500원" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_chevron_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_chevron_right_gray" />

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="9dp"
            android:indeterminateOnly="false"
            android:progressDrawable="@drawable/progess_saving"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_chevron_right"
            app:layout_constraintTop_toTopOf="parent"
            tools:progress="8" />

        <View
            android:id="@+id/progress_text_area"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/progress"
            app:layout_constraintEnd_toEndOf="@+id/progress"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/progress"
            app:layout_constraintTop_toTopOf="@+id/progress"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_progress_saving_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:textAppearance="@style/Typography.Caption3.Regular"
            android:textColor="@color/gray2"
            app:layout_constraintEnd_toEndOf="@+id/progress_text_area"
            app:layout_constraintStart_toStartOf="@+id/progress_text_area"
            app:layout_constraintTop_toTopOf="@+id/progress_text_area"
            tools:text="12번 중" />

        <TextView
            android:id="@+id/tv_progress_saving_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Typography.Body1.Bold"
            android:textColor="@color/color_primary"
            app:layout_constraintBottom_toBottomOf="@+id/progress_text_area"
            app:layout_constraintEnd_toEndOf="@+id/progress_text_area"
            app:layout_constraintStart_toStartOf="@+id/progress_text_area"
            app:layout_constraintTop_toTopOf="@+id/progress_text_area"
            tools:text="0번" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/saving_items_saved"
            android:textAppearance="@style/Typography.Caption3.Regular"
            android:textColor="@color/gray2"
            app:layout_constraintBottom_toBottomOf="@+id/progress_text_area"
            app:layout_constraintEnd_toEndOf="@+id/progress_text_area"
            app:layout_constraintStart_toStartOf="@+id/progress_text_area" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
